# My_wallet-master

My_wallet-master/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
My_wallet-master/src/my_wallet_backend/: Cargo.toml  my_wallet_backend.did
My_wallet-master/src/my_wallet_backend/src/: lib.rs  tests.rs  wallet.rs
My_wallet-master/src/my_wallet_frontend/: package-lock.json  package.json
My_wallet-master/src/my_wallet_frontend/public/: index.html
My_wallet-master/src/my_wallet_frontend/src/: App.js  index.css  index.js
