[package]
name = "my_wallet_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"  # Make sure this version matches your use
ic-cdk-macros = "0.16"  # Make sure this version matches your use
ic-cdk-timers = "0.10"  # Make sure this version matches your use
